# pto-isa

./: .clang-format  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  FAQ.md  FAQ_zh.md  OAT.xml  README.md  README_zh.md  SECURITY.md  SECURITY_zh.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  pyproject.toml  setup.py  typos.toml  version.cmake
demos/baseline/allgather_async/: CMakeLists.txt  README.md  README_zh.md  run.sh
demos/baseline/allgather_async/csrc/host/: main.cpp
demos/baseline/allgather_async/csrc/kernel/: allgather_kernel.cpp  allgather_kernel.h  allgather_urma_kernel.cpp
tests/costmodel/st/testcase/: CMakeLists.txt
tests/costmodel/st/testcase/conv2d_perf_sim/: main.cpp
tests/costmodel/st/testcase/fa_perf_sim/: main.cpp
tests/costmodel/st/testcase/gemm_perf_sim/: CMakeLists.txt  main.cpp
tests/costmodel/st/testcase/tabs/: main.cpp  tabs_kernel.cpp
tests/costmodel/st/testcase/tadd/: main.cpp  tadd_kernel.cpp
tests/costmodel/st/testcase/tadds/: main.cpp  tadds_kernel.cpp
tests/costmodel/st/testcase/tcmp/: main.cpp
tests/costmodel/st/testcase/tcolmax/: CMakeLists.txt  main.cpp  tcolmax_kernel.cpp
tests/costmodel/st/testcase/tcolmin/: main.cpp
tests/costmodel/st/testcase/tcolsum/: CMakeLists.txt  main.cpp  tcolsum_kernel.cpp
tests/costmodel/st/testcase/tcvt/: CMakeLists.txt  main.cpp  tcvt_kernel.cpp
tests/costmodel/st/testcase/tdiv/: main.cpp
tests/costmodel/st/testcase/tdivs/: main.cpp  tdivs_kernel.cpp
tests/costmodel/st/testcase/texp/: main.cpp  texp_kernel.cpp
tests/costmodel/st/testcase/textract/: CMakeLists.txt  main.cpp
tests/costmodel/st/testcase/tgather/: main.cpp
tests/costmodel/st/testcase/tload/: CMakeLists.txt  main.cpp  tload_kernel.cpp
tests/costmodel/st/testcase/tloadconv/: CMakeLists.txt  main.cpp  tloadconv_kernel.cpp
tests/costmodel/st/testcase/tmatmul/: CMakeLists.txt  main.cpp  tmatmul_kernel.cpp
tests/costmodel/st/testcase/tmax/: main.cpp
tests/costmodel/st/testcase/tmaxs/: main.cpp
tests/costmodel/st/testcase/tmin/: main.cpp
tests/costmodel/st/testcase/tmins/: main.cpp  tmins_kernel.cpp
tests/costmodel/st/testcase/tmov/: CMakeLists.txt  main.cpp
tests/costmodel/st/testcase/tmrgsort/: CMakeLists.txt  main.cpp  tmrgsort_kernel.cpp
tests/costmodel/st/testcase/tmul/: main.cpp  tmul_kernel.cpp
tests/costmodel/st/testcase/tmuls/: main.cpp  tmuls_kernel.cpp
tests/costmodel/st/testcase/tneg/: main.cpp
tests/costmodel/st/testcase/topk_perf_sim/: CMakeLists.txt  main.cpp
tests/costmodel/st/testcase/trecip/: main.cpp
tests/costmodel/st/testcase/trowexpand/: CMakeLists.txt  main.cpp  trowexpand_kernel.cpp
tests/costmodel/st/testcase/trowmax/: CMakeLists.txt  main.cpp  trowmax_kernel.cpp
tests/costmodel/st/testcase/trowmin/: CMakeLists.txt  main.cpp  trowmin_kernel.cpp
tests/costmodel/st/testcase/trowsum/: CMakeLists.txt  main.cpp  trowsum_kernel.cpp
tests/costmodel/st/testcase/trsqrt/: main.cpp
tests/costmodel/st/testcase/tscatter/: main.cpp
tests/costmodel/st/testcase/tsel/: CMakeLists.txt  main.cpp  tsel_kernel.cpp
tests/costmodel/st/testcase/tsels/: main.cpp
tests/costmodel/st/testcase/tsort32/: CMakeLists.txt  main.cpp  tsort32_kernel.cpp
tests/costmodel/st/testcase/tsqrt/: main.cpp  tsqrt_kernel.cpp
tests/costmodel/st/testcase/tsub/: main.cpp  tsub_kernel.cpp
tests/costmodel/st/testcase/tsubs/: main.cpp
tests/costmodel/st/testcase/ttrans/: CMakeLists.txt  main.cpp  ttrans_kernel.cpp
tests/costmodel/st_fit/: CMakeLists.txt
tests/costmodel/st_fit/testcase/: CMakeLists.txt
tests/costmodel/st_fit/testcase/tadds_fit/: CMakeLists.txt  main.cpp
tests/costmodel/st_fit/testcase/texp_fit/: CMakeLists.txt  main.cpp
tests/costmodel/st_fit/testcase/time_predict/: CMakeLists.txt  main.cpp
tests/costmodel/st_fit/testcase/tmatmul_fit/: CMakeLists.txt  main.cpp
tests/cpu/st/testcase/: CMakeLists.txt
tests/cpu/st/testcase/hashfind/: hashfind_kernel.cpp  main.cpp
tests/cpu/st/testcase/mgather/: gen_data.py  main.cpp  mgather_kernel.cpp
tests/cpu/st/testcase/mgather_gm2l1/: CMakeLists.txt  gen_data.py  main.cpp  mgather_gm2l1_kernel.cpp
tests/cpu/st/testcase/mscatter/: main.cpp  mscatter_kernel.cpp
tests/cpu/st/testcase/setgetval/: main.cpp  setgetval_kernel.cpp
tests/cpu/st/testcase/tabs/: gen_data.py  main.cpp  tabs_kernel.cpp
tests/cpu/st/testcase/tadd/: gen_data.py  main.cpp  tadd_kernel.cpp
tests/cpu/st/testcase/taddc/: gen_data.py  main.cpp  taddc_kernel.cpp
tests/cpu/st/testcase/tadddeqrelu/: CMakeLists.txt  gen_data.py  main.cpp  tadddeqrelu_kernel.cpp
tests/cpu/st/testcase/tadds/: main.cpp  tadds_kernel.cpp
tests/cpu/st/testcase/taddsc/: gen_data.py  main.cpp  taddsc_kernel.cpp
tests/cpu/st/testcase/tand/: gen_data.py  main.cpp  tand_kernel.cpp
tests/cpu/st/testcase/tands/: gen_data.py  main.cpp  tands_kernel.cpp
tests/cpu/st/testcase/targreduceop/: gen_data.py  main.cpp  targreduceop_kernel.cpp
tests/cpu/st/testcase/taxpy/: main.cpp  taxpy_kernel.cpp
tests/cpu/st/testcase/tbroadcast/: gen_data.py  main.cpp  tbroadcast_kernel.cpp
tests/cpu/st/testcase/tci/: main.cpp  tci_common.h  tci_kernel.cpp
tests/cpu/st/testcase/tcmp/: gen_data.py  main.cpp  tcmp_kernel.cpp
tests/cpu/st/testcase/tcmps/: gen_data.py  main.cpp  tcmps_kernel.cpp
tests/cpu/st/testcase/tcolexpand/: gen_data.py  main.cpp  tcolexpand_kernel.cpp
tests/cpu/st/testcase/tcolexpandop/: gen_data.py  main.cpp  tcolexpandop_kernel.cpp
tests/cpu/st/testcase/tcolmax/: gen_data.py  main.cpp  tcolmax_kernel.cpp
tests/cpu/st/testcase/tcolmin/: gen_data.py  main.cpp  tcolmin_kernel.cpp
tests/cpu/st/testcase/tcolsum/: gen_data.py  main.cpp  tcolsum_kernel.cpp
tests/cpu/st/testcase/tconcat/: gen_data.py  main.cpp  tconcat_kernel.cpp
tests/cpu/st/testcase/tcpu_missing_ops/: CMakeLists.txt  main.cpp
tests/cpu/st/testcase/tcvt/: gen_data.py  main.cpp  tcvt_kernel.cpp
tests/cpu/st/testcase/tdiv/: main.cpp  (+2 more)
tests/gpu/st/: CMakeLists.txt  README.md
tests/gpu/st/testcase/: CMakeLists.txt
(+4681 files in other folders)
